# idx-realtime-feed

./: .env.example  .gitignore  README.md  app.py  app.py.backup  check_dashboard.py  check_irw.py  check_sheets.py  check_staging.py  ecosystem.config.js  main.py  main_light.py  package-lock.json  pyproject.toml  quick_test.py  setup_irw.py  setup_irw_computed.py  setup_irw_full.py  setup_irw_simple.py  setup_realtime.py  setup_sheets.py  setup_sheets_final.py  start_ui.sh  stockbit_screener_rules.md  ticker.py  ticker_stream.py  update_env.py  update_token.py
bot/: __main__.py  alert_daemon.py  bsjp.py  data_pipeline.py  eod.py  intraday.py  morning.py  pre_ara.py  telegram.py
core/: config.py  logger.py
data/: elliott_wave.py  fetchers.py  integrity_log.json  mega_score.py  news.py  orderbook_wall.py  pre_ara.py  scoring.py  sentiment.py  ticker_pool_backup.csv
manifest/: feature_manifest.json
providers/: obscura_client.py  rti_provider.py  stockbit_provider.py
repositories/: integrity_guard.py  sheets_repository.py  sqlite_repository.py
schemas/: orderbook.py
scripts/: dashboard_signals.py  list_watchlists.py  refresh_token.py  restore_ticker_ordering.py  sync_watchlist.py  update_dashboard_irw.py  update_rekomendasi_beli.py
services/: auth_service.py  sync_service.py
tests/: test_formulas.py  test_orderbook_wall.py
ui/components/: sidebar.py  status_bar.py  styles.py
ui/tabs/: tab10_elliott_wave.py  tab11_top_picks.py  tab12_calendar.py  tab13_twitter_watchlist.py  tab1_live_feed.py  tab2_recommendations.py  tab3_screener.py  tab4_trending.py  (+5 more)
